# KingPaint

./: README.md  README.rst  requirements.txt  setup.cfg  upload_cmd.sh
Clib/src/: KingMatrixAlg.c  compile.cmd  compile.sh
src/king/: __init__.py
src/king/alg/: __init__.py  basic_alg.py  circle_alg.py  conic_alg.py  ellipse_alg.py  hyperbola_alg.py  parabola_alg.py  plane_geometry_alg.py  triangle_center_alg.py
src/king/core/: __init__.py  king_animation.py  king_decorater.py  king_decorater_multi_geometry.py  king_figure.py  king_geometry.py
src/king/geometry/: __init__.py  king_conic.py  king_conic_generator.py  king_conic_graph.py  king_conic_graph_generator.py  king_curve.py  king_empty_geometry.py  king_equation.py  king_function.py  king_parametric_equation.py  king_plane_geometry_graph.py  king_plane_geometry_graph_generator.py  king_point_on_curve.py  king_regular_polygon.py  king_slider.py  king_triangle_center_generator.py
src/king/geometry_attribute/: __init__.py  affine.py  angle.py  distance.py
