[metadata]
name = KingPaint
version = 1.0
author = KingAirC
author_email = 1904192877@qq.com
description = GeoGebra writen in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KingAirC/PyGeoGebra
project_urls =
    Bug Tracker = https://github.com/KingAirC/PyGeoGebra/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
